--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -12,4 +12,4 @@ jobs:
     - uses: actions/first-interaction@v1
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
-        issue-message: "Thank you for raising a issue, Hope you enjoing the open source. we try to reply or assign as soon possibe. Connect with mentor."
+        issue-message: "Thank you for raising a issue, Hope you enjoing the open source. I'm sorry to inform you that this project got excluded from Hacktoberfest-2024 your contribution will not be counted. If you still wants to contribute please go-ahead."
